    - They only work in default map mode.  Other map modes are not supported. (2 ways, 4 ways, one race / planet)
    - >>> EMR enemies showcase on menu <<<
    - This is done by replace default biters. Can be enable in startup setting.
    - Added a framework to defined the showcase units in its mod code.

  Changes:
    - All fire/acid patches have 5s initial lifetime and 15s max lifetime.



  Bugfixes:
    - Fixed an issue that armoured spawn spec were not included.

---------------------------------------------------------------------------------------------------
Version: 1.19.2
Date: 2023-08-12

  Bugfixes:
    - Fixed a start up crash when a spawn specification did not included temperature.
    - Fixed a start up crash when none of the spawn specifications loaded.

---------------------------------------------------------------------------------------------------
Version: 1.19.1
Date: 2023-08-11

  Bugfixes:
    - Fix a crash where settings in race mod cache did not properly refresh.

---------------------------------------------------------------------------------------------------
Version: 1.19.0
Date: 2023-08-11

  Features:
    - Rebuild default autoplace workflow to support unlimited race mods.
    - default autoplace now supports temperature and elevation variation under certain conditions.
    - Armoured/Cold/Explosive/Toxic biters support terrain temperature modifier for default mapping method.
    - All custom biters support map color changes.
    - Added "Enforce Temperature" startup settings. When this is set, spawners in default mapping method are generated according to its temperature specification.
    - A patch of no-one land may generated under certain conditions. Treat it as oasis, if the enemies have not expanded into it.
    - Removed dependency of erm_ prefix.  Added new way to register ERM race for data manipulation in data stage.
    - Added erm_libs as dependency.

  Changes: